Fixed overflowing image editor.
Increased precision of editor height measurement.
Increased precision of popup offset calculations.
Increased z-index of background to be on top of labels in Drag n Drop.
HFJ-1645

--- a/styles/css/h5peditor-image-popup.css
+++ b/styles/css/h5peditor-image-popup.css
@@ -9,7 +9,7 @@
   background: rgba(0,0,0,0.8);
   padding: 3em 1em;
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
 }
 
 #darkroom-icons {
@@ -64,7 +64,7 @@
 }
 
 .h5p-editing-image-popup .darkroom-image-container {
-  padding: 2em;
+  padding: 32px 2em;
 }
 
 .h5p-editing-image-popup .darkroom-image-container .canvas-container {
